--- a/MD/TechBlog/Fire/Basic/Windows/注册表.md
+++ b/MD/TechBlog/Fire/Basic/Windows/注册表.md
@@ -133,6 +133,71 @@ Windows Registry Editor Version 5.00
  @="PhotoViewer.FileAssoc.Tiff"
 ```
 
+
+[TOC]
+
+1. 运行(`Win+R`)的历史记录存储位置
+
+```
+HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\RunMRU
+``` 
+
+
+环境变量 
+
+
+HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Session Manager\Environment
+
+新建字符串类型，键入环境变量名称和数值，通过修改注册表方式加入的环境变量需要重启电脑才能生效
+
+不重启 而生效的方案 (未验证)
+
+1. 打开新的CMD终端，`set path=C:` 然后打开新的终端 打印 `%PATH%` 看新添加的环境变量是否已经生效了
+2. 另外一种方式是重启资源管理器 explorer.exe，可通过 `taskkill /im explorer.exe` 杀死资源管理器
+
+
+串口通信 端口
+
+
+计算机\HKEY_LOCAL_MACHINE\HARDWARE\DEVICEMAP\SERIALCOMM
+
+
+然后用Process Explore的find功能查找 `\Device\Serial2` 查询被端口被那个应用所占用
+
+
+为文件添加右键菜单
+
+`\HKEY_CLASSES_ROOT\*\shell ` 中添加右键菜单名MenuName 在 MenuName目录下新建command子项
+
+
+
+右键添加在当前目录打开CMD终端
+
+```
+\HKEY_CLASSES_ROOT\Directory\Background\shell\     // 右键显示 只针对未选中文件和文件夹
+cmd.exe /s /k pushd "%V"
+
+```
+
+注册表打开 Git-Bash
+
+```
+cmd /c (start /b "%cd%" "C:\Program Files\Git\git-bash.exe") && exit
+
+cmd /c (start /b "%cd%" "C:\Program Files\Git\git-bash.exe"  --cd=E:\)  //默认打开GitBash并切换至E盘
+```
+
+
+* 第三方软件在资源管理器新增网络盘符
+
+相关注册表
+
+`计算机\HKEY_CURRENT_USER\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\MyComputer\NameSpace` 
+
+# 参考资料
+1. [如何使用批处理脚本在特定目录中启动Git-Bash窗口](https://www.yisu.com/zixun/403436.html)
+
+
 # 参考资料
 
 1. [Reg-MicroSoft-Docs](https://docs.microsoft.com/zh-cn/windows-server/administration/windows-commands/reg)
