--- a/MD/TechBlog/Fire/SoftwareDevelopment/VS2017使用说明和常用配置.md
+++ b/MD/TechBlog/Fire/SoftwareDevelopment/VS2017使用说明和常用配置.md
@@ -225,4 +225,15 @@ $(FxCopDir)
 fxcop.cmd 文件的路径。fxcop.cmd 文件不和所有的 Visual C++ 版本一起安装。
 ```
 
+
+```
+严重性 代码  说明  项目  文件  行 禁止显示状态
+错误  C4996 'wcscat': This function or variable may be unsafe. Consider using wcscat_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details. OTPCheck  e:\mycode\c++\sunwin\otpcheck_20211117_卡控写死\otpcheck_api.cpp  64  
+错误  C4996 'vswprintf': function has been changed to conform with the ISO C standard, adding an extra character count parameter. To use the traditional Microsoft version, set _CRT_NON_CONFORMING_SWPRINTFS.  OTPCheck  e:\mycode\c++\sunwin\otpcheck_20211117_卡控写死\otpcheck_api.cpp  59  
+错误  C4996 '_wfopen': This function or variable may be unsafe. Consider using _wfopen_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details. OTPCheck  e:\mycode\c++\sunwin\otpcheck_20211117_卡控写死\otpcheck_api.cpp  2415  
+错误  C4996 'wcscpy': This function or variable may be unsafe. Consider using wcscpy_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details. OTPCheck  e:\mycode\c++\sunwin\otpcheck_20211117_卡控写死\otpcheck_api.cpp  2418  
+错误  C4996 'sprintf': This function or variable may be unsafe. Consider using sprintf_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details. OTPCheck  e:\mycode\c++\sunwin\otpcheck_20211117_卡控写死\otpcheck_api.cpp  2753  
+
+```
+
 # 参考资料
