' 1. 更新Cygwin文章，配置环境变量，添加右键菜单 2. 新增Android端的终端工具Termux '

--- a/MD/TechBlog/Fire/Basic/Windows/注册表.md
+++ b/MD/TechBlog/Fire/Basic/Windows/注册表.md
@@ -194,6 +194,17 @@ cmd /c (start /b "%cd%" "C:\Program Files\Git\git-bash.exe"  --cd=E:\)  //默认
 
 `计算机\HKEY_CURRENT_USER\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\MyComputer\NameSpace` 
 
+
+
+# 给文件,文件夹, 后台添加右键菜单
+
+
+关键写入的注册表位置
+
+
+# 
+
+
 # 参考资料
 1. [如何使用批处理脚本在特定目录中启动Git-Bash窗口](https://www.yisu.com/zixun/403436.html)
 2. [Reg-MicroSoft-Docs](https://docs.microsoft.com/zh-cn/windows-server/administration/windows-commands/reg)
