--- a/MD/TechBlog/Fire/SoftwareDevelopment/Android/23.AndroidHook/00.xposed概览.md
+++ b/MD/TechBlog/Fire/SoftwareDevelopment/Android/23.AndroidHook/00.xposed概览.md
@@ -83,6 +83,104 @@ compileOnly files('lib/XposedBridgeApi-54.jar')
 # 疑问
 
 
+雷电模拟器安装Xposed框架后会访问外网查询最新版的框架信息
+
+```
+GET http://dl-xda.xposed.info/framework.json HTTP/1.1
+User-Agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; HD1900 Build/LMY47I)
+Host: dl-xda.xposed.info
+Connection: Keep-Alive
+Accept-Encoding: gzip
+
+
+HTTP/1.1 200 OK
+Connection: close
+Content-Type: application/json
+Date: Wed, 29 Jun 2022 07:03:25 GMT
+Etag: W/"5a6f5f17-8ae"
+Last-Modified: Mon, 29 Jan 2018 17:51:19 GMT
+Server: nginx
+Vary: Accept-Encoding
+Content-Length: 2222
+
+{
+  "zips": [
+    {
+      "title": "Version 90-beta$(version)",
+      "url": "http://dl-xda.xposed.info/framework/sdk$(sdk)/$(arch)/xposed-v90-sdk$(sdk)-$(arch)-beta$(version).zip",
+      "versions": [
+        { "version": "3", "current": true },
+        { "version": "2" },
+        { "version": "1" }
+      ],
+      "archs": ["arm", "arm64", "x86"],
+      "sdks" : [26, 27]
+    },
+    {
+      "title": "Version $(version)",
+      "url": "http://dl-xda.xposed.info/framework/sdk$(sdk)/$(arch)/xposed-v$(version)-sdk$(sdk)-$(arch).zip",
+      "versions": [
+        { "version": "89", "current": true },
+        { "version": "88.2" },
+        { "version": "88.1" },
+        { "version": "88" },
+        { "version": "87" },
+        { "version": "86" },
+        { "version": "85" },
+        { "version": "84" },
+        { "version": "83" },
+        { "version": "82" },
+        { "version": "81" },
+        { "version": "80" },
+        { "version": "79" },
+        { "version": "78" },
+        { "version": "77" },
+        { "version": "76" },
+        { "version": "75" },
+        { "version": "74" },
+        { "version": "73" },
+        { "version": "72" }
+      ],
+      "archs": ["arm", "arm64", "x86"],
+      "sdks" : [21, 22, 23, 24, 25],
+      "exclude": [
+        {
+          "versions": ["88.1"],
+          "sdks": [21, 22, 23]
+        },
+        {
+          "versions": ["78", "79", "80", "81", "82", "83", "84", "85", "86", "87"],
+          "sdks": [24, 25]
+        },
+        {
+          "versions": ["76", "77"],
+          "sdks": [21, 22, 24, 25]
+        },
+        {
+          "versions": ["72", "73", "74", "75"],
+          "sdks": [23, 24, 25]
+        }
+      ]
+    },
+    {
+      "title": "Uninstaller ($(version))",
+      "url": "http://dl-xda.xposed.info/framework/uninstaller/xposed-uninstaller-$(version)-$(arch).zip",
+      "type": "uninstaller",
+      "versions": [
+        { "version": "20180117", "current": true },
+        { "version": "20180108" },
+        { "version": "20160829" },
+        { "version": "20150831" }
+      ],
+      "archs": ["arm", "arm64", "x86"],
+      "sdks" : [21, 22, 23, 24, 25, 26, 27]
+    }
+  ]
+}
+`
+```
+
+
 # 参考资料
 1. [[Android开发] Xposed 插件开发之一: Xposed入门](https://blog.csdn.net/niubitianping/article/details/52571438)
 2. [邓凡平-深入理解 Android（三）：Xposed 详解](https://www.infoq.cn/article/android-in-depth-xposed/)
